<resources>
    <string name="app_name">Parcial_TP3_YA1</string>
    <string name="string_explore">Explore</string>
    <string name="string_search">Search</string>
    <string name="string_offers">Offers</string>
    <string name="string_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_from">From</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notification</string>
    <string name="title_get_help">Get Help</string>
    <string name="title_calendar">Calendar</string>
    <string name="logo">FickleFlight</string>
    <string name="preference_night_mode_key">night_mode_preference</string>
    <string name="title_setting">Setting</string>
    <string name="preference_category">General</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="flight">Flight</string>
    <string name="TrendingDestination">Trending Destination</string>
    <string name="see_all">See all</string>
    <string name="Offers">Offers</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="referral_code">Referral Code</string>
    <string name="united_airlines">United Airlines</string>
    <string name="fligth_duration">01 hr 40min</string>
    <string name="origin_code">EZE</string>
    <string name="destination_code">LAX</string>
    <string name="origin_city">Ezeiza Ar</string>
    <string name="destination_city">Los Angeles</string>
    <string name="search_class">Business Class</string>
    <string name="price">$1128</string>
    <string name="view_details">View Details</string>
    <string name="limited_offer">LIMITED OFFER!</string>
    <string name="detail_offers_desc">Use your mastercard with any transaction and get 20% discount instantly!</string>
    <string name="offers_title">Get 20% discount with your Master credit cards</string>
    <string name="profile_name">Macy Johnson</string>
    <string name="profile_from">Baguio, Philippines</string>
    <string name="profile_desc">I like the beach, mountains, forest and everything about nature! :)</string>
    <string name="profile_payment">Payment Details</string>
    <string name="profile_referral_code">Referral Code</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_logout">Logout</string>
    <string name="menu_hello">Hello</string>
    <string name="string_class">Class</string>
    <string name="passengers">Passengers</string>
    <string name="date">Date</string>
    <string name="string_to">To</string>
    <string name="round_trip">Round Trip</string>
    <string name="one_way">One Way</string>
    <string name="fotos">Photos</string>
    <string name="profile_new">NEW</string>
    <string name="desdetail_booknow">Book Now</string>
    <string name="city">City</string>
    <string name="c_digo_reducido">Código reducido</string>
    <string name="country">Country</string>
    <string name="overview">Overview</string>
    <string name="descoverview">DescOverview</string>

</resources>