<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/explore"
        android:icon="@drawable/noun_dog_1022985"
        android:iconTint="#FFFFFF"
        android:title="@string/string_explore" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/noun_bone_6843350"
        android:iconTint="#FFFFFF"
        android:title="@string/string_search" />


    <item
        android:id="@+id/offers"
        android:icon="@drawable/noun_vet_6531783"
        android:iconTint="#FFFFFF"
        android:title="@string/string_offers" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/noun_vet_6531783"
        android:iconTint="#FFFFFF"
        android:title="@string/string_profile"/>


</menu>