<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_profile"

        android:icon="@drawable/p_profile"
        android:iconTint="#000000"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_notification"

        android:icon="@drawable/p_notification"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_get_help"

        android:icon="@drawable/p_mail"
        android:title="@string/title_get_help" />

    <item
        android:id="@+id/navigation_calendar"

        android:icon="@drawable/p_calender"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_settings"

        android:icon="@drawable/p_settings"
        android:title="@string/title_settings" />


</menu>